trying to fix animation overlap for experience page

--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -4,6 +4,7 @@
     margin-top: 100px;
     display: flex;
     padding-inline: 20px;
+    height: 800px;
 }
 
 .ExperienceContainer h1{
