--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -38,5 +38,6 @@
     justify-content: center;
     align-items: center;
     position: absolute;
+    border: 0.5px solid red;
 }
 
